# rustboy

./: '  .gitignore  :  Cargo.toml  LICENSE  README.md  \  cycle.txt  index.html  new.txt  notes.txt  out.txt  state.txt  state.txt.bak  todo.txt  vram.txt
roms/blaargs/: testris-dump.txt
roms/blaargs/cpu_instrs/individual/: check.txt
roms/cpu_instrs/individual/: check.txt  output.txt  rustboy.txt
rustboy-gb/: Cargo.toml  error_log.txt  sound.txt
rustboy-gb/src/: '  constants.rs  gameboy.rs  lib.rs  util.rs
rustboy-gb/src/cpu/: execute.rs  instructions.rs  interrupts.rs  mod.rs  tests.rs  timer.rs
rustboy-gb/src/interconnect/: apu.rs  cartridge.rs  cartridge_info.rs  joypad.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mmu.rs  mod.rs  nombc.rs  ppu.rs  serial.rs  sweep.rs
rustboy-gb/src/interconnect/apu/: envelope.rs  length_counter.rs  mod.rs  noise.rs  square1.rs  square2.rs  sweep.rs  wave.rs
rustboy-gb/src/interconnect/cartridge/: cartridge_info.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  nombc.rs
rustboy-gui/: Cargo.toml  TEST_SAVE.sav  tetris
rustboy-gui/src/: constants.rs  gui.rs  main.rs  support.rs  tree.txt
rustboy-gui/src/gui/: mod.rs
rustboy-wasm/: Cargo.toml  build.sh
rustboy-wasm/src/: lib.rs
rustboy-wasm/web/: index.html  index.js  opt_rustboy.d.ts  opt_rustboy.js  opt_rustboy_bg.wasm  opt_rustboy_bg.wasm.d.ts  rustboy_wasm.d.ts  rustboy_wasm.js  rustboy_wasm_bg.wasm  rustboy_wasm_bg.wasm.d.ts  style.css
src/: cartridge.rs  chip.rs  constants.rs  cpu.rs  frontend.rs  gameboy.rs  interconnect.rs  lcd.rs  lib.rs  main.rs  mmu.rs  ppu.rs  tests.rs  window.rs
src/cpu/: execute.rs  instructions.rs  interrupts.rs  mod.rs  tests.rs  timer.rs
src/interconnect/: cartridge.rs  cartridge_info.rs  mbc1.rs  mod.rs  ppu.rs
tests/: blaargs.rs
