[workspace]

members = [
    "rustboy-gb",
    "rustboy-wasm",
    "rustboy-gui",
]

[profile.release]
#lto = true

[profile.release.package.rustboy-gb]
#lto="fat"
#codegen-units = 1
#panic = "abort"
overflow-checks = true

[profile.release.package.rustboy-gui]
debug=true

[profile.release.package.rustboy-wasm]
opt-level = 's'
