[package]
name = "rustboy-gb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
modular-bitfield = "0.11.2"
wasm-bindgen = "0.2.87"
bincode = "1.3.3"
serde = {version = "1.0.203",features =["derive"]}
serde-big-array = "0.5.1"

[lib]
name = "rustboy"
path = "src/lib.rs"
