[package]
name = "rustboy-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.3.19"
log = "0.4.17"
pretty_env_logger = "0.4.0"
env_logger = "0.10.0"
rustboy-gb= {path = "../rustboy-gb"}
sdl2 = "0.35.2"
