[package]
name = "rustboy-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.3.19"
log = "0.4.17"
pretty_env_logger = "0.4.0"
env_logger = "0.10.0"
sdl2 = "0.36"
rustboy-gb= {path = "../rustboy-gb"}
#glium = "0.32.1"
imgui = "0.12.0"
#imgui-glium-renderer = "0.11.0"
#imgui-winit-support = "0.11.0"
rfd = {version = "0.14.1", default-features=false, features=["gtk3"]}


glow = "0.13.1"
imgui-glow-renderer = "0.12.0"
