[package]
name = "rustboy-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustboy-gb= {path = "../rustboy-gb"}
anyhow = "1.0.72"
log = "0.4.17"
pretty_env_logger = "0.4.0"
env_logger = "0.10.0"
imgui = "0.12.0"
rfd = {version = "0.14.1", default-features=false, features=["gtk3"]}
glow = "0.13.1"
imgui-glow-renderer = "0.12.0"

[dependencies.sdl2]
version = "0.37.0"
