[package]
name = "rustboy-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
wasm-bindgen = "0.2.83"
rustboy-gb= {path = "../rustboy-gb"}
web-sys = {version = "0.3.64", features = ["console",
"CanvasRenderingContext2d",
"Document",
"Element",
"HtmlCanvasElement",
"Window"]}

[lib]
crate-type = ["rlib", "cdylib"]

